--- a/Spec.Sniffer/MainWindow.xaml
+++ b/Spec.Sniffer/MainWindow.xaml
@@ -5,16 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:video="clr-namespace:Spec.Sniffer.Model.Camera;assembly=Spec.Sniffer.Model"
         xmlns:local="clr-namespace:Spec.Sniffer"
-        xmlns:viewModel="clr-namespace:Spec.Sniffer.ViewModel" x:Class="Spec.Sniffer.MainWindow"
+        xmlns:viewModel="clr-namespace:Spec.Sniffer.ViewModel" xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="Spec.Sniffer.MainWindow"
         mc:Ignorable="d"
-        Title="Spec.Sniffer V0.0.1" Height="720" Width="1100" WindowStartupLocation="CenterScreen"  ResizeMode="CanResizeWithGrip" >
+        Title="Spec.Sniffer V0.0.1" Height="720" Width="1100" WindowStartupLocation="CenterScreen"  ResizeMode="CanMinimize" >
 
     <Window.Resources>
 
 
-        <Style TargetType="{x:Type ComboBox}">
 
-        </Style>
         <Style TargetType="{x:Type Label}">
             <Setter Property="FontFamily" Value="Leelawadee UI Semilight"/>
             <Setter Property="FontSize" Value="16"/>
@@ -81,6 +79,11 @@
             <Setter Property="Background" Value="Transparent" />
         </Style>
 
+        <Style TargetType="{x:Type ComboBox}">
+            <Setter Property="Opacity" Value="0.3"></Setter>
+        </Style>
+
+
     </Window.Resources>
 
     <Grid>
@@ -116,8 +119,8 @@
 
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="380"/>
+                                <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
 
 
@@ -133,8 +136,8 @@
 
                                     <Grid Margin="10">
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="6*"/>
-                                            <RowDefinition Height="*"/>
+                                            <RowDefinition Height="279*"/>
+                                            <RowDefinition Height="37*"/>
                                         </Grid.RowDefinitions>
 
                                         <video:WebcamDevice 
@@ -149,10 +152,7 @@
                                                   SelectedValuePath="UsbString"
                                                   ItemsSource="{Binding MediaDeviceList}"
                                                   SelectedItem="{Binding SelectedVideoDevice}"
-                                                  Background="Transparent">
-
-
-                                        </ComboBox>
+                                                  Background="Transparent"/>
                                     </Grid>
                                 </Border>
 
@@ -166,12 +166,87 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
 
+                                    <ToggleButton x:Name="TuneBtn"
+                                                  IsChecked="{Binding TuneBtnIsChecked}"
+                                                  Grid.Column="0" Margin="5"
+                                                  Background="Transparent">
+                                        <ToggleButton.Style>
+                                            <Style TargetType="{x:Type ToggleButton}">
+                                                <Style.Triggers>
+                                                    
+                                                    <Trigger Property="IsChecked" Value="False">
+                                                        <Setter Property="Content">
+                                                            <Setter.Value>
+                                                                <Border BorderThickness="0">
+                                                                    <Image Source="pack://siteoforigin:,,,/Resources/speakersOff.png" Margin="30"/>
+                                                                </Border>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                    </Trigger>
+                                                    <Trigger Property="IsChecked" Value="true">
+                                                        <Setter Property="Content">
+                                                            <Setter.Value>
+                                                                <Border BorderThickness="0">
+                                                                    <Image Source="pack://siteoforigin:,,,/Resources/speakersOn.png" Margin="30"/>
+                                                                </Border>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </ToggleButton.Style>
+                                    </ToggleButton>
+    
+                                    <ToggleButton x:Name="MicButton"
+                                                  Grid.Column="1" Margin="5"
+                                                  Background="Transparent"
+                                                  IsChecked="{Binding MicBtnIsChecked}">
+
+                                        <ToggleButton.Style>
+                                            <Style TargetType="{x:Type ToggleButton}">
+                                                <Style.Triggers>
+
+                                                    <Trigger Property="IsChecked" Value="False">
+                                                        <Setter Property="Content">
+                                                            <Setter.Value>
+                                                                <Border BorderThickness="0">
+                                                                    <Image Source="pack://siteoforigin:,,,/Resources/MicStop.png" Margin="30"/>
+                                                                </Border>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                        <Setter Property="IsEnabled" Value="True"/>
+                                                    </Trigger>
+
+                                                    <Trigger Property="IsChecked" Value="true">
+                                                        <Setter Property="Content">
+                                                            <Setter.Value>
+                                                                <Border BorderThickness="0">
+                                                                    <Image Source="pack://siteoforigin:,,,/Resources/MicRecord.png" Margin="30"/>
+                                                                </Border>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                        <Setter Property="IsEnabled" Value="False"/>
+                                                    </Trigger>
+
+                                                    <Trigger Property="IsChecked" Value="">
+                                                        <Setter Property="Content">
+                                                            <Setter.Value>
+                                                                <Border BorderThickness="0">
+                                                                    <Image Source="pack://siteoforigin:,,,/Resources/MicPlay.png" Margin="30"/>
+                                                                </Border>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                        <Setter Property="IsEnabled" Value="False"/>
+                                                    </Trigger>
+
+                                                </Style.Triggers>
+                                            </Style>
+                                        </ToggleButton.Style>
+
+                                    </ToggleButton>
 
 
-
-                                        <StackPanel Grid.Column="1">
-
-                                        </StackPanel>
+                                        <StackPanel Grid.Column="1"/>
 
                                     </Grid>
 
@@ -222,7 +297,7 @@
                                             <StackPanel Grid.Row="1" Grid.Column="0"
                                                         Orientation="Horizontal">
                                                 <Label Content="Network: "/>
-                                                <Label Content="Connected"/>
+                                                <Label Content="{Binding InternetStatus}"/>
                                             </StackPanel>
 
                                             <StackPanel Grid.Row="1" Grid.Column="1" 
@@ -424,9 +499,7 @@
                                                     Binding="{Binding Caption}"
                                                     IsReadOnly="True" 
                                                     FontFamily="Yu Gothic UI" 
-                                                    FontWeight="Bold">
-
-                                                </DataGridTextColumn>
+                                                    FontWeight="Bold"/>
 
                                             </DataGrid.Columns>
                                             <DataGrid.RowDetailsTemplate>
