--- a/Spec.Sniffer/MainWindow.xaml
+++ b/Spec.Sniffer/MainWindow.xaml
@@ -109,6 +109,11 @@
             </TabControl.DataContext>
 
             <TabItem Header="Diagnostics" Background="{x:Null}" >
+                <TabItem.InputBindings>
+                    <KeyBinding 
+                                Key="F1"
+                                Command="{Binding LcdTestCommand}" />
+                </TabItem.InputBindings>
 
                 <Grid>
                     <Grid.ColumnDefinitions>
